--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,11 +1,20 @@
 {
   "@microsoft/generator-sharepoint": {
+    "plusBeta": false,
     "isCreatingSolution": true,
+    "nodeVersion": "18.18.0",
+    "sdksVersions": {
+      "@microsoft/microsoft-graph-client": "3.0.2",
+      "@microsoft/teams-js": "2.12.0"
+    },
+    "version": "1.18.0",
+    "libraryName": "testspfxdemo",
+    "libraryId": "780a8162-114f-481b-9f9a-239e8ff7a5e1",
     "environment": "spo",
-    "version": "1.10.0",
-    "libraryName": "working-with-property-pane-controls",
-    "libraryId": "b2607ce8-e9ba-4c4a-a518-753be042280d",
     "packageManager": "npm",
+    "solutionName": "testspfxdemo",
+    "solutionShortDescription": "testspfxdemo description",
+    "skipFeatureDeployment": true,
     "isDomainIsolated": false,
     "componentType": "webpart"
   }
